# bithive

./: .dockerignore  .env.example  .gitignore  .lintstagedrc.mjs  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ava.config.cjs  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.yml  test.yml
.husky/: pre-commit
contracts/bip322-contract/: Cargo.toml
contracts/bip322-contract/src/: lib.rs
contracts/bip322-verifier/: Cargo.toml
contracts/bip322-verifier/src/: lib.rs
contracts/bithive/: Cargo.toml
contracts/bithive/src/: account.rs  admin.rs  deposit.rs  events.rs  legacy.rs  lib.rs  types.rs  view.rs  withdraw.rs
contracts/bithive/src/ext/: bip322_verifier.rs
contracts/bithive/src/utils/: btc.rs  time.rs
contracts/btc-client/: Cargo.toml
contracts/btc-client/src/: account.rs  admin.rs  consts.rs  deposit.rs  events.rs  kdf.rs  legacy.rs  lib.rs  types.rs  upgrade.rs  view.rs  withdraw.rs
contracts/btc-client/src/ext/: btc_light_client.rs  btc_lightclient.rs  chain_signature.rs  chain_signatures.rs  mod.rs
contracts/btc-client/src/utils/: btc.rs  current_account_id.rs  mod.rs
contracts/mock-btc-light-client/: Cargo.toml
contracts/mock-btc-light-client/src/: lib.rs
contracts/mock-btc-lightclient/: Cargo.toml
contracts/mock-btc-lightclient/src/: lib.rs
contracts/mock-chain-signature/: Cargo.toml
contracts/mock-chain-signature/src/: lib.rs
contracts/mock-chain-signatures/: Cargo.toml
contracts/mock-chain-signatures/src/: lib.rs
tests/__tests__/: deposit.ava.ts  deposit_locktime.ts  owner.ava.ts  queue_withdraw.ava.ts  queue_withdrawal.ava.ts  sign_withdraw.ava.ts  sign_withdrawal.ava.ts  submit_withdraw.ava.ts  submit_withdrawal.ava.ts
tests/__tests__/helpers/: bithive.ts  btc.ts  btc_client.ts  chain_signature.ts  context.ts  near_client.ts  txn_builder.ts  utils.ts
tests/__tests__/integration/: README.md  btc_script.ava.ts  e2e_workflow.ava.ts
