[package]
name = "btc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "4.1.1", features = ["unstable"]}
near-contract-standards = "4.1.1"
uint = "0.9.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
bitcoin = { version = "=0.32.2", default-features = false, features = ["serde"] }
hex="0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.12", features = ["custom"] }

[features]
test = []
