[package]
name = "mock-chain-signatures"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"
hex="0.4.3"
serde_json="1"
